--- a/구구단/index.html
+++ b/구구단/index.html
@@ -5,14 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-      crossorigin
-    ></script>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
@@ -33,15 +27,14 @@
         };
         onSubmit = (event) => {
           event.preventDefault();
-          if (
-            Number(this.state.inputValue) ===
-            this.state.firstNumber * this.state.secondNumber
-          ) {
-            this.setState({
-              firstNumber: Math.ceil(Math.random() * 9),
-              secondNumber: Math.ceil(Math.random() * 9),
-              inputValue: "",
-              result: `정답입니다 정답 : ${this.state.inputValue}`,
+          if (Number(this.state.inputValue) === this.state.firstNumber * this.state.secondNumber) {
+            this.setState((prevState) => {
+              return {
+                firstNumber: Math.ceil(Math.random() * 9),
+                secondNumber: Math.ceil(Math.random() * 9),
+                inputValue: "",
+                result: `정답입니다 정답 : ${prevState.inputValue}`,
+              };
             });
           } else {
             this.setState({
@@ -51,23 +44,20 @@
           }
         };
         render() {
+          console.log("Rendering");
           const { firstNumber, secondNumber, inputValue, result } = this.state;
           return (
-            <div>
+            <>
               <h4>구구단 문제</h4>
               <p>
                 {firstNumber} x {secondNumber} = ?
               </p>
               <form onSubmit={this.onSubmit}>
-                <input
-                  type="number"
-                  value={inputValue}
-                  onChange={this.onChange}
-                />
+                <input type="number" value={inputValue} onChange={this.onChange} />
                 <button>정답 확인</button>
               </form>
               <div>{result}</div>
-            </div>
+            </>
           );
         }
       }
