--- a/base/index.html
+++ b/base/index.html
@@ -5,36 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      const e = React.createElement;
-      class LikeButton extends React.Component {
-        constructor(props) {
-          super(props);
-          this.state = {
-            liked: false,
-          };
-        }
-        render() {
-          return e(
-            "button",
-            {
-              onClick: () => {
-                this.setState({ liked: !this.state.liked });
-              },
-              type: "submit",
-            },
-            this.state.liked ? "LIKED" : "LIKE"
-          );
-        }
-      }
-    </script>
-    <script>
-      ReactDOM.render(e(LikeButton), document.querySelector("#root"));
-    </script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
