--- a/base/index.html
+++ b/base/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./src/app.js"></script>
+    <script src="./assets/main.js"></script>
   </body>
 </html>
